--- a/index.html
+++ b/index.html
@@ -3,45 +3,119 @@
 <head>
   <meta charset="UTF-8">
   <title>UKIダウンロードリンク</title>
-  <link rel="stylesheet" href="style.css">
+  <style>
+    body {
+      background-color: #2c2c2c; /* 濃いグレー背景 */
+      color: #fff;
+      font-family: 'Arial', sans-serif;
+      margin: 0;
+      padding: 0;
+      height: 100vh;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+    }
+
+    .container {
+      text-align: center;
+      padding: 2em;
+      border-radius: 12px;
+    }
+
+    h1 {
+      font-size: 2em;
+      margin-bottom: 1em;
+    }
+
+    label {
+      font-size: 1.2em;
+      display: block;
+      margin-bottom: 1em;
+    }
+
+    .step {
+      color: #ffeb3b;
+      font-weight: bold;
+      margin-right: 0.3em;
+    }
+
+    input {
+      padding: 1em;
+      font-size: 1.2em;
+      width: 80%;
+      max-width: 400px;
+      border: none;
+      border-radius: 8px;
+      margin-bottom: 1.5em;
+      text-align: center;
+    }
+
+    button {
+      background-color: #ffeb3b;
+      color: #000;
+      border: none;
+      padding: 1em 2em;
+      font-size: 1.2em;
+      border-radius: 10px;
+      cursor: pointer;
+      transition: background-color 0.3s ease;
+    }
+
+    button:hover {
+      background-color: #fdd835;
+    }
+  </style>
 </head>
 <body>
-  <h1>UKIダウンロードリンク</h1>
-  <form id="codeForm">
-    <label for="serial"><strong>1.</strong> 6桁のシリアルコードを入力してください</label>
-    <input type="text" id="serial" maxlength="6" required>
-    <button type="submit">コードを確認</button>
-  </form>
-  <p id="message"></p>
+  <div class="container">
+    <h1>UKIダウンロードリンク</h1>
+    <form id="codeForm">
+      <label for="codeInput"><span class="step">1.</span> 6桁のシリアルコードを入力してください</label>
+      <input type="text" id="codeInput" maxlength="6" required>
+      <button type="submit">コードを確認</button>
+    </form>
+  </div>
 
   <script>
-    document.getElementById("codeForm").addEventListener("submit", async function(e) {
+    document.getElementById('codeForm').addEventListener('submit', function (e) {
       e.preventDefault();
-      const inputCode = document.getElementById("serial").value.toUpperCase();
-      const message = document.getElementById("message");
-      message.textContent = "確認中...";
+      const inputCode = document.getElementById('codeInput').value.trim().toUpperCase();
 
-      const response = await fetch("UKIcordlst.csv");
-      const text = await response.text();
-      const codes = text.split(/\r?\n/).map(line => line.trim());
-
-      if (codes.includes(inputCode)) {
-        const prefix = inputCode.slice(0, 2);
-        let url = null;
-        switch (prefix) {
-          case "BR": url = "https://photos.app.goo.gl/peM4DP9JWJD5eP2D8"; break;
-          case "AS": url = "https://photos.app.goo.gl/TAAc2THfZTaKC96g9"; break;
-          case "BN": url = "https://photos.app.goo.gl/8PNiCH55RYK7z3AT6"; break;
-          case "ID": url = "https://photos.app.goo.gl/S85W5xfgkVdm1f5e8"; break;
-        }
-        if (url) {
-          window.location.href = url;
-        } else {
-          message.textContent = "対応するURLが見つかりません。";
-        }
-      } else {
-        message.textContent = "このコードは無効です。";
-      }
+      fetch('UKIcordlst.csv')
+        .then(response => {
+          if (!response.ok) throw new Error('CSV読み込み失敗');
+          return response.text();
+        })
+        .then(text => {
+          const codes = text.split('\n').map(line => line.trim());
+          if (codes.includes(inputCode)) {
+            const prefix = inputCode.slice(0, 2);
+            let url = '';
+            switch (prefix) {
+              case 'BR':
+                url = 'https://photos.app.goo.gl/peM4DP9JWJD5eP2D8';
+                break;
+              case 'AS':
+                url = 'https://photos.app.goo.gl/TAAc2THfZTaKC96g9';
+                break;
+              case 'BN':
+                url = 'https://photos.app.goo.gl/8PNiCH55RYK7z3AT6';
+                break;
+              case 'ID':
+                url = 'https://photos.app.goo.gl/S85W5xfgkVdm1f5e8';
+                break;
+              default:
+                alert('無効なコード形式です。');
+                return;
+            }
+            window.location.href = url;
+          } else {
+            alert('コードが見つかりません。もう一度確認してください。');
+          }
+        })
+        .catch(error => {
+          alert('エラーが発生しました: ' + error.message);
+        });
     });
   </script>
 </body>
