--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <title>UKIダウンロードリンク</title>
   <style>
     body {
-      background-color: #2c2c2c; /* 濃いグレー背景 */
+      background-color: #2c2c2c;
       color: #fff;
       font-family: 'Arial', sans-serif;
       margin: 0;
@@ -87,7 +87,10 @@
           return response.text();
         })
         .then(text => {
-          const codes = text.split('\n').map(line => line.trim()).filter(code => code && code !== 'serialcode');
+          const codes = text
+            .split(/\r?\n/)
+            .map(line => line.trim().toUpperCase())
+            .filter(code => code && code !== 'SERIALCODE');
 
           if (codes.includes(inputCode)) {
             const prefix = inputCode.slice(0, 2);
